fixed broken image icon on firefox and made slider reponsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,6 @@ h2#name,h2#userLevel,h2#rankLeague,h2#rankName,h2#LP{
 #champRotation{
   text-align: center;
 }
+img[src='']{
+    display: none;
+}
